projects/sintatico.y
%{
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

#include "lexico.c"
#include "utils.c"
int contaVar = 0;
int rotulo = 0;
int ehRegistro = 0;
int tipo;
int tam; //tamanho da estrutura qdo percorre q expressçao de acesso
int des; // desloamento para chegar no campo
int pos; // posição do tipo na tabela de simbolos
%}

%token T_PROGRAMA
%token T_INICIO
%token T_FIM
%token T_IDENTIF
%token T_LEIA
%token T_ESCREVA
%token T_ENQTO
%token T_FACA
%token T_FIMENQTO
%token T_SE
%token T_ENTAO
%token T_SENAO
%token T_FIMSE
%token T_ATRIB
%token T_VEZES
%token T_DIV
%token T_MAIS
%token T_MENOS
%token T_MAIOR
%token T_MENOR
%token T_IGUAL
%token T_E
%token T_OU
%token T_V
%token T_F
%token T_NUMERO
%token T_NAO
%token T_ABRE
%token T_FECHA
%token T_LOGICO
%token T_INTEIRO
%token T_DEF
%token T_FIMDEF
%token T_REGISTRO
%token T_IDPONTO

%start programa

%left T_E T_OU
%left T_IGUAL
%left T_MAIOR T_MENOR
%left T_MAIS T_MENOS
%left T_VEZES T_DIV

%%

programa 
   : cabecalho
         {
           strcpy(elemTab.id, "inteiro");
           elemTab.end = -1;
           elemTab.tip = INT;
           elemTab.tam = 1;
           elemTab.pos = 0;
           insereSimbolo(elemTab);
           strcpy(elemTab.id, "logico");
           elemTab.end = -1;
           elemTab.tip = LOG;
           elemTab.tam = 1;
           elemTab.pos = 1;
           insereSimbolo(elemTab);
          } 
     definicoes variaveis 
        {  
            mostraTabela();
            empilha (contaVar);
            if (contaVar)
               fprintf(yyout, "\tAMEM\t%d\n", contaVar); 
        }
     T_INICIO lista_comandos T_FIM
        { 
            int conta = desempilha();
            if (conta)
               fprintf(yyout, "\tDMEM\t%d\n", conta); 
        }
        { fprintf(yyout, "\tFIMP\n"); }
   ;

cabecalho
   : T_PROGRAMA T_IDENTIF
       { fprintf(yyout, "\tINPP\n"); }
   ;

tipo
   : T_LOGICO
         { 
            tipo = LOG; 
            tam = 1;
            pos = 1;
         }
   | T_INTEIRO
         { 
            tipo = INT;
            tam = 1;
            pos = 0;
        }
   | T_REGISTRO T_IDENTIF
         { 
            tipo = REG; 
            int i = buscaSimbolo(atomo);
            if (i != -1) {
               tam = tabSimb[i].tam;
               pos = tabSimb[i].pos;
            } else {
               // Trate o caso em que o registro não é encontrado
               yyerror("Registro não encontrado na tabela de símbolos");
            }
         }
   ;

definicoes
   : def definicoes
   | /* vazio */
   ;

def 
   : T_DEF
        {   //aqui começa as mod
            // TODO #3 - OK
            // Iniciar a lista de campos
            elemTab.deslocamentoAcumulado = 0;
            elemTab.campos = NULL;
        } 
   definicao_campos T_FIMDEF T_IDENTIF
       {
           // TODO #4 - OK
           // Inserir esse novo tipo na tabela de simbolos
           // com a lista que foi montada
           insereRegistroESeusCampos(atomo, elemTab.campos);
       }
   ;

definicao_campos
   : tipo lista_campos definicao_campos
   | tipo lista_campos
   ;

lista_campos
   : lista_campos T_IDENTIF
      {
          insereCampo(&elemTab.campos, atomo, tipo, elemTab.deslocamentoAcumulado, tam, pos);
          elemTab.deslocamentoAcumulado += tam; // Atualiza o deslocamento acumulado
      }
   | T_IDENTIF
      {
          insereCampo(&elemTab.campos, atomo, tipo, elemTab.deslocamentoAcumulado, tam, pos);
          elemTab.deslocamentoAcumulado += tam; // Atualiza o deslocamento acumulado
      }

variaveis
   : /* vazio */
   | declaracao_variaveis
   ;

declaracao_variaveis
   : tipo lista_variaveis declaracao_variaveis
   | tipo lista_variaveis
   ;

lista_variaveis
   : lista_variaveis T_IDENTIF
        { 
            strcpy(elemTab.id, atomo);
            elemTab.end = contaVar;  // Endereço atual
            elemTab.tip = tipo;
            elemTab.tam = tam;
            elemTab.pos = pos;    // Posição na tabela de símbolos
            
            if (tipo == REG) {
                // Busca os campos do registro correspondente e atribui a elemTab.campos
                CampoReg* camposDoTipo = buscaTipoRegistroPorPosicao(elemTab.pos);
                if (camposDoTipo != NULL) {
                    elemTab.campos = copiaCampos(camposDoTipo);
                }
                contaVar += tam; // Incrementa contaVar pelo tamanho total do registro
            } else {
                contaVar++; // Para tipos INT e LOG, incrementa contaVar por 1
            }
            insereSimbolo(elemTab); // Insere o símbolo na tabela
        }
   | T_IDENTIF
       { 
            // Mesma lógica que acima
            strcpy(elemTab.id, atomo);
            elemTab.end = contaVar;
            elemTab.tip = tipo;
            elemTab.tam = tam;
            elemTab.pos = pos;
            if (tipo == REG) {
                CampoReg* camposDoTipo = buscaTipoRegistroPorPosicao(elemTab.pos);
                if (camposDoTipo != NULL) {
                    elemTab.campos = copiaCampos(camposDoTipo);
                }
                contaVar += tam;
            } else {
                contaVar++;
            }
            insereSimbolo(elemTab);
        }
   ;


lista_comandos
   : /* vazio */
   | comando lista_comandos
   ;

comando
   : entrada_saida
   | atribuicao
   | selecao
   | repeticao
   ;

entrada_saida
   : entrada
   | saida 
   ;

entrada
   : T_LEIA T_IDENTIF
       { 
          int pos = buscaSimbolo (atomo);
          // TODO #8
          // Se for registro, tem que fazer uma repetição do
          // TAM do registro de leituras
          fprintf(yyout, "\tLEIA\n"); 
          fprintf(yyout, "\tARZG\t%d\n", tabSimb[pos].end);
       }
   ;

saida
   : T_ESCREVA expressao
       {  
          desempilha(); 
          // TODO #9
          // Se for registro, tem que fazer uma repetição do
          // TAM do registro de escritas
          fprintf(yyout, "\tESCR\n"); 
      }
   ;

atribuicao
   : expressao_acesso
       { 
         // TODO #10 - FEITO
         // Tem que guardar o TAM, DES e o TIPO (POS do tipo, se for registro)
         empilha(tam);
         empilha(des);
         empilha(tipo);
       }
     T_ATRIB expressao
       { 
          int tipexp = desempilha();
          int tipvar = desempilha();
          int des = desempilha();
          int tam = desempilha();
          if (tipexp != tipvar)
             yyerror("Incompatibilidade de tipo!");
          // TODO #11 - FEITO
          // Se for registro, tem que fazer uma repetição do
          // TAM do registro de ARZG
          for (int i = 0; i < tam; i++)
             fprintf(yyout, "\tARZG\t%d\n", des + i); 
       }
   ;

selecao
   : T_SE expressao T_ENTAO 
       {  
          int t = desempilha();
          if (t != LOG)
            yyerror("Incompatibilidade de tipo!");
          fprintf(yyout, "\tDSVF\tL%d\n", ++rotulo); 
          empilha(rotulo);
       }
     lista_comandos T_SENAO 
       {  
           fprintf(yyout, "\tDSVS\tL%d\n", ++rotulo);
           int rot = desempilha(); 
           fprintf(yyout, "L%d\tNADA\n", rot);
           empilha(rotulo); 
       }
     lista_comandos T_FIMSE
       {  
          int rot = desempilha();
          fprintf(yyout, "L%d\tNADA\n", rot);  
       }
   ;

repeticao
   : T_ENQTO 
       { 
         fprintf(yyout, "L%d\tNADA\n", ++rotulo);
         empilha(rotulo);  
       }
     expressao T_FACA 
       {  
         int t = desempilha();
         if (t != LOG)
            yyerror("Incompatibilidade de tipo!");
         fprintf(yyout, "\tDSVF\tL%d\n", ++rotulo); 
         empilha(rotulo);
       }
     lista_comandos T_FIMENQTO
       { 
          int rot1 = desempilha();
          int rot2 = desempilha();
          fprintf(yyout, "\tDSVS\tL%d\n", rot2);
          fprintf(yyout, "L%d\tNADA\n", rot1);  
       }
   ;

expressao
   : expressao T_VEZES expressao
       {  testaTipo(INT,INT,INT); fprintf(yyout, "\tMULT\n");  }
   | expressao T_DIV expressao
       {  testaTipo(INT,INT,INT); fprintf(yyout, "\tDIVI\n");  }
   | expressao T_MAIS expressao
      {  testaTipo(INT,INT,INT); fprintf(yyout, "\tSOMA\n");  }
   | expressao T_MENOS expressao
      {  testaTipo(INT,INT,INT); fprintf(yyout, "\tSUBT\n");  }
   | expressao T_MAIOR expressao
      {  testaTipo(INT,INT,LOG); fprintf(yyout, "\tCMMA\n");  }
   | expressao T_MENOR expressao
      {  testaTipo(INT,INT,LOG); fprintf(yyout, "\tCMME\n");  }
   | expressao T_IGUAL expressao
      {  testaTipo(INT,INT,LOG); fprintf(yyout, "\tCMIG\n");  }
   | expressao T_E expressao
      {  testaTipo(LOG,LOG,LOG); fprintf(yyout, "\tCONJ\n");  }
   | expressao T_OU expressao
      {  testaTipo(LOG,LOG,LOG); fprintf(yyout, "\tDISJ\n");  }
   | termo
   ;

expressao_acesso
   : T_IDPONTO
       {   //--- Primeiro nome do registro
           if (!ehRegistro) {
              ehRegistro = 1;
              // TODO #12 - FEITO
              // 1. busca o simbolo na tabela de símbolos
              // 2. se não for do tipo registo tem erro
              // 3. guardar o TAM, POS e DES desse t_IDENTIF
              int busca = buscaSimbolo(atomo);
              if (busca != -1 && tabSimb[busca].tip != REG) {
                 yyerror("Tipo esperado: REG");
              }
              tam = tabSimb[busca].tam;
              pos = tabSimb[busca].pos;
              des = 0; // Deslocamento inicial
           } else {
              //--- Campo que eh registro
              // 1. busca esse campo na lista de campos
              // 2. se não encontrar, erro
              // 3. se encontrar e não for registro, erro
              // 4. guardar o TAM, POS e DES desse CAMPO
              CampoReg *campoAtual = tabSimb[pos].campos;
              while (campoAtual) {
                 if (strcmp(campoAtual->nomeCampo, atomo) == 0) {
                    if (campoAtual->tipoCampo != REG) {
                       yyerror("Tipo esperado: REG");
                    }
                    tam = campoAtual->tam;
                    pos = campoAtual->pos;
                    des = campoAtual->deslocamento;
                    break;
                 }
                 campoAtual = campoAtual->prox;
              }
              if (!campoAtual) {
                 yyerror("Campo não encontrado no registro");
              }
           }
       }
     expressao_acesso
   | T_IDENTIF
       {   
           if (ehRegistro) {
               // TODO #13 - FEITO
               // 1. buscar esse campo na lista de campos
               // 2. Se não encontrar, erro
               // 3. guardar o TAM, DES e TIPO desse campo.
               //    o tipo (TIP) nesse caso é a posição do tipo
               //    na tabela de simbolos
               CampoReg *campoAtual = tabSimb[pos].campos;
               while (campoAtual) {
                  if (strcmp(campoAtual->nomeCampo, atomo) == 0) {
                     tam = campoAtual->tam;
                     des = campoAtual->deslocamento;
                     pos = campoAtual->tipoCampo == REG ? campoAtual->pos : -1;
                     break;
                  }
                  campoAtual = campoAtual->prox;
               }
               if (!campoAtual) {
                  yyerror("Campo não encontrado no registro");
               }
           }
           else {
              // TODO #14 - FEITO
              int pos = buscaSimbolo (atomo);
              // guardar TAM, DES e TIPO dessa variável
              tam = tabSimb[pos].tam;
              des = 0; // Não se aplica, pois não é um registro
              pos = pos; // Não se aplica, pois não é um registro
           }
           ehRegistro = 0;
       };


termo
   : expressao_acesso
       {
          // TODO #15
          // Se for registro, tem que fazer uma repetição do
          // TAM do registro de CRVG (em ondem inversa)
          fprintf(yyout, "\tCRVG\t%d\n", tabSimb[pos].end);  
          empilha(tipo);
       }
   | T_NUMERO
       {  
          fprintf(yyout, "\tCRCT\t%s\n", atomo);  
          empilha(INT);
       }
   | T_V
       {  
          fprintf(yyout, "\tCRCT\t1\n");
          empilha(LOG);
       }
   | T_F
       {  
          fprintf(yyout, "\tCRCT\t0\n"); 
          empilha(LOG);
       }
   | T_NAO termo
       {  
          int t = desempilha();
          if (t != LOG)
              yyerror ("Incompatibilidade de tipo!");
          fprintf(yyout, "\tNEGA\n");
          empilha(LOG);
       }
   | T_ABRE expressao T_FECHA
   ;
%%

int main(int argc, char *argv[]) {
    char *p, nameIn[100], nameOut[100];
    argv++;
    if (argc < 2) {
        puts("\nCompilador da linguagem SIMPLES");
        puts("\n\tUSO: ./simples <NOME>[.simples]\n\n");
        exit(1);
    }
    p = strstr(argv[0], ".simples");
    if (p) *p = 0;
    strcpy(nameIn, argv[0]);
    strcat(nameIn, ".simples");
    strcpy(nameOut, argv[0]);
    strcat(nameOut, ".mvs");
    yyin = fopen(nameIn, "rt");
    if (!yyin) {
        puts ("Programa fonte não encontrado!");
        exit(2);
    }
    yyout = fopen(nameOut, "wt");
    yyparse();
    printf("programa ok!\n\n");
    return 0;
}
